--- a/.github/workflows/cv-arxiv-daily.yml
+++ b/.github/workflows/cv-arxiv-daily.yml
@@ -11,7 +11,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches:
-    - main
+    - master
 
 env:
 
@@ -45,7 +45,7 @@ jobs:
       - name: Push new cv-arxiv-daily.md
         uses: github-actions-x/commit@v2.9
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.TOKEN }}
           commit-message: "Github Action Automatic Update CV Arxiv Papers"
           files: README.md cv-arxiv-daily.json docs/cv-arxiv-daily-web.json docs/index.md docs/cv-arxiv-daily-wechat.json docs/wechat.md
           rebase: 'true'
